--- a/public/Assets/Backend/css/themes/semi-dark-layout.css
+++ b/public/Assets/Backend/css/themes/semi-dark-layout.css
@@ -20,7 +20,7 @@
   color: #b4b7bd; }
 
 .semi-dark-layout .main-menu-content .navigation-main .nav-item.open:not(.sidebar-group-active) > a {
-  background-color: #161d31; }
+  background-color: #136bd1; }
 
 .semi-dark-layout .main-menu-content .navigation-main .nav-item a:after,
 .semi-dark-layout .main-menu-content .navigation-main .nav-item a {
@@ -55,5 +55,5 @@
   background-color: transparent; }
 
 .semi-dark-layout .menu-collapsed .main-menu:not(.expanded) .navigation-main li.active > a {
-  background: #161d31 !important;
+  background: #136bd1 !important;
   color: #fff !important; }
