--- a/public/Assets/Backend/css/colors.css
+++ b/public/Assets/Backend/css/colors.css
@@ -477,7 +477,7 @@ input:focus ~ .bg-light {
   background: rgba(158, 149, 245, 0.6); }
 
 .text-primary.text-lighten-1 {
-  color: #887ef2 !important; }
+  color: #4c72e6 !important; }
 
 .bg-primary.bg-lighten-1 {
   background-color: #887ef2 !important; }
